// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parser: gram annotations (%rule syntax) > gram in function return: Num -> Num %outputRule 1`] = `
{
  "icit": "Explicit",
  "lhs": {
    "type": "var",
    "variable": {
      "type": "name",
      "value": "Num",
    },
  },
  "rhs": {
    "modalities": {
      "gram": {
        "type": "var",
        "variable": {
          "type": "name",
          "value": "outputRule",
        },
      },
    },
    "term": {
      "type": "var",
      "variable": {
        "type": "name",
        "value": "Num",
      },
    },
    "type": "modal",
  },
  "type": "arrow",
}
`;

exports[`parser: gram annotations (%rule syntax) > gram only: Num %myRule 1`] = `
{
  "modalities": {
    "gram": {
      "type": "var",
      "variable": {
        "type": "name",
        "value": "myRule",
      },
    },
  },
  "term": {
    "type": "var",
    "variable": {
      "type": "name",
      "value": "Num",
    },
  },
  "type": "modal",
}
`;

exports[`parser: gram annotations (%rule syntax) > liquid + gram: Num [|\\n -> n > 0|] %myRule 1`] = `
{
  "modalities": {
    "gram": {
      "type": "var",
      "variable": {
        "type": "name",
        "value": "myRule",
      },
    },
    "liquid": {
      "annotation": undefined,
      "body": {
        "arg": {
          "type": "lit",
          "value": {
            "type": "Num",
            "value": 0,
          },
        },
        "fn": {
          "arg": {
            "type": "var",
            "variable": {
              "type": "name",
              "value": "n",
            },
          },
          "fn": {
            "type": "var",
            "variable": {
              "type": "name",
              "value": ">",
            },
          },
          "icit": "Explicit",
          "type": "application",
        },
        "icit": "Explicit",
        "type": "application",
      },
      "icit": "Explicit",
      "type": "lambda",
      "variable": "n",
    },
  },
  "term": {
    "type": "var",
    "variable": {
      "type": "name",
      "value": "Num",
    },
  },
  "type": "modal",
}
`;

exports[`parser: gram annotations (%rule syntax) > quantity + gram: <1> Num %myRule 1`] = `
{
  "modalities": {
    "gram": {
      "type": "var",
      "variable": {
        "type": "name",
        "value": "myRule",
      },
    },
    "quantity": "One",
  },
  "term": {
    "type": "var",
    "variable": {
      "type": "name",
      "value": "Num",
    },
  },
  "type": "modal",
}
`;

exports[`parser: gram annotations (%rule syntax) > quantity + liquid + gram: <1> Num [|\\n -> n > 0|] %myRule 1`] = `
{
  "modalities": {
    "gram": {
      "type": "var",
      "variable": {
        "type": "name",
        "value": "myRule",
      },
    },
    "liquid": {
      "annotation": undefined,
      "body": {
        "arg": {
          "type": "lit",
          "value": {
            "type": "Num",
            "value": 0,
          },
        },
        "fn": {
          "arg": {
            "type": "var",
            "variable": {
              "type": "name",
              "value": "n",
            },
          },
          "fn": {
            "type": "var",
            "variable": {
              "type": "name",
              "value": ">",
            },
          },
          "icit": "Explicit",
          "type": "application",
        },
        "icit": "Explicit",
        "type": "application",
      },
      "icit": "Explicit",
      "type": "lambda",
      "variable": "n",
    },
    "quantity": "One",
  },
  "term": {
    "type": "var",
    "variable": {
      "type": "name",
      "value": "Num",
    },
  },
  "type": "modal",
}
`;
